# TheWhisper

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
asr_postprocess/: README.md  analyze_errors.py  apply_correction.py  config.py  dashboard.py  fetch_audio.py  ml_normalizer.py  optimize_prompt.py  requirements.txt
asr_postprocess/experiments/opt_trb/prompts/: optimized_program_de_gemma-4-26B-A4B-it.json  (+5 more)
asr_postprocess/results/: MODEL_CohereLabs-cohere-transcribe-03-2026_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_de_test.jsonl  MODEL_CohereLabs-cohere-transcribe-03-2026_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_en_test.jsonl  MODEL_CohereLabs-cohere-transcribe-03-2026_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_es_test.jsonl  MODEL_CohereLabs-cohere-transcribe-03-2026_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_fr_test.jsonl  MODEL_CohereLabs-cohere-transcribe-03-2026_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_it_test.jsonl  MODEL_CohereLabs-cohere-transcribe-03-2026_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_pt_test.jsonl  MODEL_TheStageAI-thewhisper-large-v3-turbo_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_de_test.jsonl  MODEL_TheStageAI-thewhisper-large-v3-turbo_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_en_test.jsonl  MODEL_TheStageAI-thewhisper-large-v3-turbo_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_es_test.jsonl  MODEL_TheStageAI-thewhisper-large-v3-turbo_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_fr_test.jsonl  MODEL_TheStageAI-thewhisper-large-v3-turbo_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_it_test.jsonl  MODEL_TheStageAI-thewhisper-large-v3-turbo_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_pt_test.jsonl  MODEL_mistralai-Voxtral-Small-24B-2507_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_de_test.jsonl  MODEL_mistralai-Voxtral-Small-24B-2507_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_en_test.jsonl  MODEL_mistralai-Voxtral-Small-24B-2507_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_es_test.jsonl  MODEL_mistralai-Voxtral-Small-24B-2507_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_fr_test.jsonl  MODEL_mistralai-Voxtral-Small-24B-2507_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_it_test.jsonl  MODEL_mistralai-Voxtral-Small-24B-2507_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_pt_test.jsonl  MODEL_openai-whisper-large-v3-turbo_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_de_test.jsonl  MODEL_openai-whisper-large-v3-turbo_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_en_test.jsonl  MODEL_openai-whisper-large-v3-turbo_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_es_test.jsonl  MODEL_openai-whisper-large-v3-turbo_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_fr_test.jsonl  MODEL_openai-whisper-large-v3-turbo_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_it_test.jsonl  MODEL_openai-whisper-large-v3-turbo_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_pt_test.jsonl  MODEL_openai-whisper-large-v3_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_de_test.jsonl  MODEL_openai-whisper-large-v3_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_en_test.jsonl  MODEL_openai-whisper-large-v3_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_es_test.jsonl  MODEL_openai-whisper-large-v3_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_fr_test.jsonl  MODEL_openai-whisper-large-v3_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_it_test.jsonl  MODEL_openai-whisper-large-v3_DATASET_nithinraok-asr-leaderboard-datasets_fleurs_pt_test.jsonl  summary_CohereLabs-cohere-transcribe-03-2026.json  summary_TheStageAI-thewhisper-large-v3-turbo.json  summary_mistralai-Voxtral-Small-24B-2507.json  summary_openai-whisper-large-v3-turbo.json  summary_openai-whisper-large-v3.json
benchmark/: README.md  data_utils.py  eval_utils.py  requirements.txt  run_evaluation.py
electron_app/: .gitignore  README.md  app.js  audio-processor.js  index.html  main.js  package-lock.json  package.json  preload.js  styles.css
electron_app/src/: index.html
examples/: run_apple_asr.py  run_nvidia_asr.py  run_streaming.py  server.py
scripts/: run_apple_asr.py  run_batched_asr.py  run_nvidia_asr.py  run_streaming.py  test_apple_asr.py  test_nvidia_asr.py
thestage_asr/apple/: asr_pipeline.py  mlx_modules.py  model.py
thestage_asr/nvidia/: __init__.py  asr_pipeline.py  hf_pipeline.py
thestage_asr/streaming/: local_agreement.py  streaming_pipeline.py  streams.py
thestage_speechkit/: __init__.py  vad.py
thestage_speechkit/apple/: __init__.py  asr_pipeline.py  mlx_modules.py  model.py  quantization_utils.py
thestage_speechkit/nvidia/: __init__.py  asr_pipeline.py
thestage_speechkit/streaming/: __init__.py  local_agreement.py  streaming_pipeline.py  streams.py
