[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thestage-speechkit"
version = "0.1.0"
description = "Optimized Whisper models for streaming and on-device use"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["asr", "whisper", "streaming", "mlx", "nvidia", "fastapi"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "editdistance",
  "librosa",
  "fastapi",
  "uvicorn",
  "python-multipart",
  "sounddevice",
]

[project.optional-dependencies]
nvidia = [
  "torch==2.6.0",
  "torchaudio==2.6.0",
  "tensorrt==10.6.0.post2",
  "tensorrt-cu12==10.6.0.post2",
  "tensorrt-cu12-bindings==10.6.0.post2",
  "tensorrt-cu12-libs==10.6.0.post2",
]
nvidia_thestage = [
  # Provide the index at install time:
  # pip install .[nvidia_thestage] --extra-index-url https://thestage.jfrog.io/artifactory/api/pypi/pypi-thestage-ai-production/simple
  "thestage-elastic-models[nvidia]",
  "torchaudio==2.6.0",
]
apple = [
  "torch==2.6.0",
  "torchaudio==2.6.0",
  "transformers==4.49.0",
  "editdistance",
  "mlx==0.25.2",
  "coremltools==8.3.0",
  "mlx_whisper==0.4.2",
]

[project.urls]
Homepage = "https://github.com/a31m/TheWhisper"
Source = "https://github.com/a31m/TheWhisper"
Issues = "https://github.com/a31m/TheWhisper/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["thestage_speechkit*"]
exclude = ["examples*", "scripts*", "tests*"]
