[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thestage-speechkit"
version = "0.1.0"
description = "Optimized Whisper models for streaming and on-device use"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["asr", "whisper", "streaming", "mlx", "nvidia", "fastapi"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "editdistance",
  "librosa",
  "silero-vad",
  "fastapi",
  "uvicorn",
  "python-multipart",
  "sounddevice",
  "httpx",
  "python-dotenv",
]

[project.optional-dependencies]
nvidia = [
  "torch==2.9.0",
  "transformers==4.52.3",
  "torchaudio==2.9.0",
  "tensorrt==10.13.0.35",
  "tensorrt-cu12==10.13.0.35",
  "tensorrt-cu12-bindings==10.13.0.35",
  "tensorrt-cu12-libs==10.13.0.35",
]
apple = [
  "torch==2.7.0",
  "torchaudio==2.7.0",
  "transformers==4.52.3",
  "editdistance",
  "mlx==0.25.2",
  "coremltools==8.3.0",
]

[project.urls]
Homepage = "https://github.com/TheStageAI/TheWhisper"
Source = "https://github.com/TheStageAI/TheWhisper"
Issues = "https://github.com/TheStageAI/TheWhisper/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["thestage_speechkit*"]
exclude = ["examples*", "scripts*", "tests*"]
